<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Definitions of various string resources -->
    <string name="app_name">Smart Sleeper</string>
    <string name="action_settings">Settings</string>
    <string name="enter_cycles">Preferred Sleep Cycles:</string>
    <string name="edit_message">Enter # of sleep cycles</string>
    <string name="button_send">Set Alarm</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_confirmation">Confirmation screen</string>
    <string name="action_search">Search</string>
    <string name="done">Done</string>

    <!-- Preferences - string definitions -->
    <string name="set_time">Time</string>
    <string name="set_date">Date</string>
    <string name="desc_settings">Catch full sleep cycles for a great night\'s rest!</string>
    <string name="pick_bedTime">Set Bed Time</string>
    <string name="pick_wakeTime">Set Wake Time</string>
    <string name="no_Time">No time set!</string>
    <string name="calc_Time">You should get up at:</string>
    <string name="no_calcTime">--</string>

    <!-- Confirmation Screen -->
    <string name="confirmed">Preferences Saved!</string>

</resources>
